# Grade-Requirements

./: README.md  grades.py
St-Andrews-Grade-Classifier/: app.py  grades.py  pyproject.toml
St-Andrews-Grade-Classifier/src/: backend_logic.py  io_csv.py
